# quantum-variational-methods-for-susy-qm

./: LICENSE  README.md  pyproject.toml
Appendix/Hamiltonian_SQM/: Hamiltonian_SQM_0p1.py
data/None/DW/: DW_2.json
data/Table2&Fig7/AHO/: AHO_32.json  AHO_8.json  data_4.txt
data/Table2&Fig7/DW/: data_8.txt
data/Table2&Fig7/QHO/: QHO_4.json  data_2.txt
data/Table2+Fig7/AHO/: AHO_16.json  data_32.txt
data/Table2+Fig7/DW/: DW_32.json  data_16.txt  data_4.txt
data/Table2+Fig7/QHO/: QHO_32.json  data_64.txt
data/Table5/DW/: DW16.tex
data/Table5/QHO/: QHO16.tex
data/Table6+7/10000/: ratios.tex
paper_results_data/Table2&Fig7/: tab.tex
paper_results_data/Table2&Fig7/AHO/: AHO_2.json  AHO_4.json  AHO_64.json  data_16.txt  data_2.txt  data_64.txt  data_8.txt
paper_results_data/Table2&Fig7/DW/: DW_16.json  DW_2.json  DW_4.json  DW_64.json  DW_8.json  data_2.txt  data_32.txt  data_64.txt
paper_results_data/Table2&Fig7/QHO/: QHO_16.json  QHO_2.json  QHO_64.json  QHO_8.json  data_16.txt  data_32.txt  data_4.txt  data_8.txt
paper_results_data/Table5/AHO/: AHO16.tex
paper_results_data/Table6&7/None/: ratios.tex
src/Algorithms/AVQE/: avqe.py
src/Algorithms/VQD/: vqd.py
src/Analyses/Adaptive-VQE/: Plot.ipynb  ansatz_steps_vqe.ipynb  process_results.ipynb
src/Analyses/VQD/: compare.ipynb  plot.ipynb  ratios.ipynb
src/Analyses/VQE/: boxplots.ipynb  median-diff-plot.ipynb
src/Plotting&Tables/: run_all.ps1
src/Plotting&Tables/AVQE/: tables.py
src/Plotting&Tables/VQD/: tables.py
src/VQE/: VQE.py
src/susy_qm/: __init__.py  ansatze.py
(+388 files in other folders)
